# pvspeaker

./: README.md
.github/actions/c-template/: action.yml
.github/workflows/: c-demo.yml  c.yml  dotnet-codestyle.yml  dotnet-demo.yml  dotnet.yml  link-check.yml  nodejs-codestyle.yml  nodejs-demos.yml  nodejs.yml  python-demos.yml  python.yml
binding/dotnet/: .gitignore  PvSpeaker.sln  README.md
binding/dotnet/PvSpeaker/: PvSpeaker.cs  PvSpeaker.csproj  PvSpeaker.netstandard2.0.targets  PvSpeakerException.cs
binding/dotnet/PvSpeakerTest/: MainTest.cs  PvSpeakerTest.csproj
binding/nodejs/: .eslintrc.js  .gitignore  README.md  copy.js  package.json  tsconfig.json
binding/nodejs/src/: errors.ts  index.ts  pv_speaker.ts  pv_speaker_status_t.ts
binding/nodejs/test/: pv_speaker.test.ts
binding/python/: README.md  __init__.py  _pvspeaker.py  setup.py  test_pv_speaker.py
demo/c/: README.md  pv_speaker_demo.c
demo/dotnet/: .gitignore  PvSpeakerDemo.sln  README.md
demo/dotnet/PvSpeakerDemo/: PvSpeakerDemo.cs  PvSpeakerDemo.csproj
demo/nodejs/: README.md  demo.js  package.json
demo/python/: README.md  pv_speaker_demo.py  requirements.txt  setup.py
lib/mac/arm64/: libpv_speaker.dylib
lib/mac/x86_64/: libpv_speaker.dylib
lib/node/linux/x86_64/: pv_speaker.node
lib/node/mac/arm64/: pv_speaker.node
lib/node/mac/x86_64/: pv_speaker.node
lib/node/raspberry-pi/cortex-a53/: pv_speaker.node
lib/node/raspberry-pi/cortex-a53-aarch64/: pv_speaker.node
lib/node/raspberry-pi/cortex-a72/: pv_speaker.node
lib/node/raspberry-pi/cortex-a72-aarch64/: pv_speaker.node
lib/node/raspberry-pi/cortex-a76/: pv_speaker.node
lib/node/raspberry-pi/cortex-a76-aarch64/: pv_speaker.node
lib/node/windows/amd64/: pv_speaker.node
project/: CMakeLists.txt  README.md
project/include/: pv_circular_buffer.h  pv_speaker.h
project/node/: CMakeLists.txt  delayhook.c  pv_speaker_napi.c
project/src/: pv_circular_buffer.c  pv_speaker.c
project/test/: test_pv_circular_buffer.c  test_pv_speaker.c
resources/.lint/spell-check/: .cspell.json  dict.txt
